<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bat App</string>
    <string name="addnew">New Record</string>
    <string name="view">View Records</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view">View Criminals</string>
    <string name="nametext">Name</string>
    <string name="agetext">Age</string>
    <string name="gendertext">Gender</string>
    <string name="crimestext">Crimes</string>
    <string name="locationtext">Location</string>
    <string name="criminalimage">Criminal Image</string>
    <string name="title_activity_open">Open Criminal Data</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_new">Add New Criminal</string>
    <string name="edit">Edit criminal data</string>
    <string name="delete">Delete criminal data</string>
    <string name="call">Call Robin</string>
    <string name="exit">Exit</string>
    <string name="save">Save Criminal Data</string>
    <string name="update">Update Criminal Data</string>
    <string name="title_activity_edit">Edit Criminal Data</string>
    <string name="title_activity_search">Search</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Type to search!</string>
    <string name="takepicture">Select picture</string>

</resources>
