<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|fill_horizontal|center_vertical|center_horizontal|fill|fill_vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:src="@drawable/criminal" android:contentDescription="@string/criminalimage"
                android:padding="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:gravity="center|center_vertical|center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/nametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nametext"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/agetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agetext"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/gendertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gendertext"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/crimestext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crimestext"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/locationtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationtext"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>