<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_vertical|center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="275dp"
        android:layout_height="150dp"
        android:id="@+id/criminalimagee"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/criminal"
        android:layout_weight="0.32"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nametext"
        android:gravity="center|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="12dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editage"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/agetext"
        android:gravity="center|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editgender"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gendertext"
        android:gravity="center|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editcrimes"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/crimestext"
        android:gravity="center|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/editlocation"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/locationtext"
        android:gravity="center|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"
            android:textSize="14dp"
            android:padding="10dp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>
